# sdata

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: conf.cmake  deps.cmake
examples/: dialog.sd  features.sd  format.sd  game.cpp  game.sd  user.sd  window.sd
include/sdata/: CMakeLists.txt  format.hpp  node.cpp  node.hpp  parser.cpp  parser.hpp  scanner.cpp  sdata.hpp  serializer.hpp  style.hpp  token.hpp  traits.hpp  type.hpp  variant.cpp  variant.hpp  writer.cpp  writer.hpp
include/sdata/misc/: assert.hpp  basic_writer.hpp  escaped.hpp  fmt.hpp  parse_number.hpp  source_location.hpp
include/sdata/regex/: regex.hpp  regex_match.hpp  regex_parser.hpp  regex_writer.cpp
src/sdata/: CMakeLists.txt  format.hpp  node.cpp  node.hpp  parser.cpp  scanner.cpp  scanner.hpp  sdata.hpp  serializer.hpp  style.hpp  token.hpp  type.hpp  variant.hpp  writer.hpp
src/sdata/misc/: any_of.hpp  bit.hpp  code_exception.hpp  exception.hpp  trim.hpp
src/sdata/regex/: regex_automata.cpp  regex_automata.hpp  regex_category.hpp  regex_match.hpp  regex_parser.cpp  regex_writer.hpp
src/sdata_format/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  main.cpp  node_test.hpp  parser_test.hpp  regex_test.hpp  scanner_test.hpp  writer_test.hpp
